# routes/cases.js
@@ -1,11 +1,12 @@
 const express = require('express');
 const router = express.Router();
 const casesController = require('../controllers/cases');
+const isAuthenticated = require('../middleware/isAuthenticated');
 
 router.get('/', casesController.getAll);
 router.get('/:id', casesController.getSingle);
-router.post('/', casesController.createCase);
-router.put('/:id', casesController.updateCase);
-router.delete('/:id', casesController.deleteCase);
+router.post('/', isAuthenticated, casesController.createCase);
+router.put('/:id', isAuthenticated, casesController.updateCase);
+router.delete('/:id', isAuthenticated, casesController.deleteCase);
 
 module.exports = router;
