# routes/index.js
@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
+router.use('/auth', require('./auth'));
 router.use('/cases', require('./cases'));
 router.use('/materials', require('./materials'));
 
